<resources>
    <string name="app_name">Test36</string>
    <string name="input_mobile_no">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码</string>
    <string name="create_account">创建新账号</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="btn_send_sms_code">发送验证码</string>
    <string name="btn_next_step">下一步</string>
    <string name="input_password_hint">请输入6-16位的数字或字母作为密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="register">注册</string>
</resources>
