<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hugy.test36.account.view.PasswordSettingActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_hint"
        android:layout_marginVertical="15dp"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        />


<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:layout_marginTop="60dp"/>
</LinearLayout>
</android.support.constraint.ConstraintLayout>
