<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hugy.test36.account.view.RegisterActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/input_mobile_no"
        android:layout_margin="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/edit_sms_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_sms_code"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_sms_code"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="《经纪王者用户使用协议》"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next_step"/>

</LinearLayout>
</android.support.constraint.ConstraintLayout>
